RESOLVED FIXED170327
[WK2] Tapping editable text inside of a range selection no longer changes the selection to a caret
https://bugs.webkit.org/show_bug.cgi?id=170327
Summary [WK2] Tapping editable text inside of a range selection no longer changes the...
Wenson Hsieh
Reported 2017-03-30 23:22:00 PDT
Attachments
Patch (2.64 KB, patch)
2017-03-30 23:27 PDT, Wenson Hsieh
no flags
Archive of layout-test-results from ews126 for ios-simulator-wk2 (846.57 KB, application/zip)
2017-03-31 05:17 PDT, Build Bot
no flags
Added a test (8.55 KB, patch)
2017-03-31 11:53 PDT, Wenson Hsieh
thorton: review+
Patch for landing (8.44 KB, patch)
2017-03-31 14:04 PDT, Wenson Hsieh
no flags
Wenson Hsieh
Comment 1 2017-03-30 23:27:30 PDT
Build Bot
Comment 2 2017-03-31 05:17:37 PDT
Comment on attachment 305946 [details] Patch Attachment 305946 [details] did not pass ios-sim-ews (ios-simulator-wk2): Output: http://webkit-queues.webkit.org/results/3448143 New failing tests: fast/history/page-cache-createObjectURL-using-open-panel.html
Build Bot
Comment 3 2017-03-31 05:17:38 PDT
Created attachment 305965 [details] Archive of layout-test-results from ews126 for ios-simulator-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews126 Port: ios-simulator-wk2 Platform: Mac OS X 10.11.6
Wenson Hsieh
Comment 4 2017-03-31 11:53:58 PDT
Created attachment 305989 [details] Added a test
Wenson Hsieh
Comment 5 2017-03-31 14:04:24 PDT
Created attachment 306009 [details] Patch for landing
WebKit Commit Bot
Comment 6 2017-03-31 14:46:46 PDT
Comment on attachment 306009 [details] Patch for landing Clearing flags on attachment: 306009 Committed r214687: <http://trac.webkit.org/changeset/214687>
Note You need to log in before you can comment on or make changes to this bug.